Hanya menambahkan fitur registrasi bagi admin, masih ada yang salah, seharusnya jika combo box dipilih pembeli, maka terdaftar sebagai pembeli

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,3 +15,12 @@ h1 {
     text-decoration: none;
     color: black;
 }
+
+.form-control {
+    border-radius: 20px;
+}
+select option {
+    font-size: 15px;
+}
+
+
