--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #ddd;
+}
+
 .jumbotron {
     /* margin-top: 50px !important; */
     background-image: url('../img/bgSayur1.jpg');
@@ -42,3 +46,6 @@ a:hover {
     background-color: #ddd !important;
 }
 
+section {
+    background-color: #fff;
+}
