mengedit bagian footer dengan menambahlan icon dan memberi link untuk a

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,3 +54,11 @@ section {
     width: auto;
     height: 150px;
 }
+
+.infoLayanan li a{
+    color: white;
+}
+
+.infoLayanan li a:hover{
+    color: darkgrey;
+}
