a href from light to gray

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,3 +67,10 @@ section {
     color: darkgrey;
 }
 
+.navbar{
+        background-color: transparent;
+        border: none;
+        color: white;
+        z-index: 100;
+        transition: background-color 1s ease 0s;
+}
