--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,12 +2,12 @@
 ::selection { background-color: #E13300; color: white; }
 ::-moz-selection { background-color: #E13300; color: white; }
 
-body {
-    background-color: #fff;
-    /* margin: 40px; */
-    font: 13px/20px normal Helvetica, Arial, sans-serif;
-    color: #4F5155;
-}
+ /* body {
+    /* background-color: #fff;
+    margin: 40px; */
+    /* font: 13px/20px normal Helvetica, Arial, sans-serif; */
+    /* color: #4F5155; */
+/* }  */ */
 
 a {
     color: #003399;
@@ -90,7 +90,7 @@ p.footer {
     height: 30px;
     line-height: 2.5em;
     text-align: center;
-    background: #6f85b5
+    background: black;
 }
 
 .msg-wgt-header a {
@@ -158,6 +158,7 @@ tr.msg-wgt-message-list-separator td {
     width: 100%;
     height: 40px;
     border-top: 1px solid #ddd;
+    font : 13px/20px normal Helvetica, Arial, sans-serif;
 }
 
 .msg-wgt-message-form textarea {
