--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,3 +101,14 @@ section {
 .product-grid .add-to-cart{color:#000;font-size:13px;font-weight:600}
 @media only screen and (max-width:990px){.product-grid{margin-bottom:30px}
 }
+
+.alert {
+    animation: autoHide 0s ease-in 3s forwards;
+}
+
+@keyframes autoHide {
+    to {
+      visibility: hidden;
+      position: absolute;
+    }
+}
